# assignment-2-CPP

./: README.md
configs/json/: model_config.json
data/: model_architecture.json
report/: CPP_LAYER_WISE_OUTPUT.txt  LOG file.txt  MODEL_LAYER_WISE_OUTPUT.txt  ModelValueExtractor.py  image_classifier_ipynb.ipynb  image_saver_ipynb.ipynb
src/: CMakeLists.txt  main.cpp
utilities/include/: convolution.h  dense.h  pooling.h
utilities/src/: convolution.cpp  dense.cpp  pooling.cpp
